Se organiza con estilos

--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
     <head>
         <title>Athene Cocktails</title>
         <meta charset="UTF-8">
+        <link href= "Estilos/Estilo1.css" rel="stylesheet" type="text/css" >
     </head>
-    <body style="background-color:indigo">
-        <header style="background-color: rgb(0, 35, 130);">
+    <body>
+        <header>
             <h1>Athene Cocktails</h1>
             <h2>Sangrías Artesanales y Cocteles</h2>
-            <img src="imagenes/LogoAtheneColor.png" alt="Athene Cocktails" style="width:200px;height:200px">
+            <img src="imagenes/LogoAtheneColor.png" alt="Athene Cocktails">
         </header>
-        <nav style="background-color:darkcyan">
+        <nav>
             <ul>
                 <li>Misión</li>
                 <li>Visión</li>
                 <li>Productos</li>
             </ul>
         </nav>
-        <div style="background-color: midnightblue;">
+
+        <div>
             <h3>
                 <p>Manejamos productos totalmente artesanales, sin ningun tipo de conservantes. 
                 No te quedes sin darle gusto a tu paladar.  Asistimos todo tipo de eventos.  </p>
@@ -43,10 +45,10 @@
         <section name="Galeria" style="background-color: darkcyan;">
             <article>
                 <header><h3>Catalogo de imagenes</h3></header>
-                <img src="imagenes/Presentaciones.png" alt="Presentacicones" style="width:200px ;height:200px">
-                <img src="imagenes/Ancheta 1 Fondo Blanco.jpg" alt="Ancheta 1" style="width:200px ;height:200px">
-                <img src="imagenes/Ancheta 2 Fondo Blanco.jpg" alt="Ancheta 2" style="width:200px ;height:200px">
-                <img src="imagenes/Ancheta 3.jpg" alt="Ancheta 3" style="width:200px ;height:200px">
+                <img src="imagenes/Presentaciones.png" alt="Presentacicones">
+                <img src="imagenes/Ancheta 1 Fondo Blanco.jpg" alt="Ancheta 1">
+                <img src="imagenes/Ancheta 2 Fondo Blanco.jpg" alt="Ancheta 2">
+                <img src="imagenes/Ancheta 3.jpg" alt="Ancheta 3">
             </article>
         </section>
         <br>
