Carga con responsive

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <header>
             <h1>Athene Cocktails</h1>
+            <img src="imagenes/LogoAtheneColor.png" alt="Athene Cocktails" class="LogoCentrado">
             <h2>Sangrías Artesanales y Cocteles</h2>
-            <img src="imagenes/LogoAtheneColor.png" alt="Athene Cocktails">
         </header>
         <nav>
             <ul>
